--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="citrusStylesSE-grid__cell">
                         <div class="citrusStylesSE-card"> 
-                            <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_elsey-multicat.png" alt="Illustration of two cat faces.">>
+                            <img src="https://assets.petco.com/petco/image/upload/f_auto,q_auto/preciouscat_elsey-multicat.png" alt="Illustration of two cat faces.">
                             <div class="citrusStylesSE-card__body citrusStylesSE-letter-box-none citrusStylesSE-pillar-box-none">
                                 <p class="citrusStylesSE-card__title citrusStylesSE__text--subHead">Multi-cat strength</p>
                             </div>
