--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Cache-control" max-age=290304000 content="public">
 <title>Dr. Elsey’s | Petco </title>
 <meta name="description" content="Dr. Elsey’s | Petco">
 <link rel="stylesheet" href="CitrusStylesSE.css">
@@ -154,7 +155,7 @@
                 </div>
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusPrecious__iframeContainer">
-                        <iframe height="315" src="https://www.youtube-nocookie.com/embed/KI0LsqjOy2g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                        <!-- <iframe height="315" src="https://www.youtube-nocookie.com/embed/KI0LsqjOy2g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> -->
                     </div>
                 </div>
             </div>
