--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="citrusStylesSE-grid__cell">
                     <div class="citrusPrecious__iframeContainer">
-                        <!-- <iframe height="315" src="https://www.youtube-nocookie.com/embed/KI0LsqjOy2g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> -->
+                        <iframe height="315" src="https://www.youtube-nocookie.com/embed/KI0LsqjOy2g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
